# cvops-python

./: .dockerignore  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  classes.txt  cmake_install.cmake  pyproject.toml  tmp
.github/actions/install_virtualenv/: action.yaml
.github/actions/short_sha/: action.yaml
.github/workflows/: build-test-release.yaml
cmake/: CMakeLists.txt
src/cvops/: __init__.py  __main__.py  cli.py  config.py  deployments.py  device.py  events.py  image_processor.py  logging.py  model_types.py  mqtt.py  schemas.py  tracking.py  util.py  video.py  workflows.py
src/cvops/inference/: c_api.py  c_interfaces.py  factories.py  loader.py  manager.py
src/cvops/inference/lib/: libcvops.so.1.0.0  libopencv_highgui.so.408  libopencv_ml.so.4.8.1  libopencv_photo.so.408  libopencv_video.so.408  libopencv_videoio.so.4.8.1
src/tests/: __init__.py  __main__.py  test_inference.py  test_local_video.py  test_tracker.py
src/tests/files/: yolov8n-metadata.json
src/tools/: __init__.py
